<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.hsbo.veki.trackingapp.MainActivity">

    <item android:id="@+id/action_location_found"
        android:icon="@drawable/gps_on"
        android:alpha="0.5"
        android:title="@string/action_location_found"
        android:checked="true"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_username"
        android:orderInCategory="100"
        android:title="@string/action_username"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_vehicle"
        android:title="@string/vehicle"
        app:showAsAction="never" >
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/carMenuItem"
                app:showAsAction="never"
                android:title="@string/car" />
            <item
                android:id="@+id/pedestrianMenuItem"
                app:showAsAction="never"
                android:title="@string/pedestrian" />
            <item
                android:id="@+id/bicycleMenuItem"
                app:showAsAction="never"
                android:title="@string/bicycle" />

        </group>
    </menu>
    </item>

</menu>
